Fix Url Selector CSS in unit tests

--- a/tests/url_selector_tests.html
+++ b/tests/url_selector_tests.html
@@ -9,8 +9,7 @@
   <script type="text/javascript" src="jasmine/lib/jasmine-core/jasmine-html.js"></script>
   <script type="text/javascript" src="jasmine/lib/jasmine-core/boot.js"></script>
 
-  <!--<link rel="stylesheet" type="text/css" href="../popup.css">
-  -->
+  <link rel="stylesheet" type="text/css" href="../url_selector.css">
 
   <script type="text/javascript" src="../common.js"></script>
   <script type="text/javascript" src="../url_selector.js"></script>
